// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dst with array should be replaced 1`] = `
"{
    a: string
}"
`;

exports[`dts 1`] = `
"{
    auto: string
    cover: string
    contain: string
}"
`;

exports[`dts ignore DEFAULT 1`] = `
"StyleObject<{}> & {
    1: StyleObject<{}>
    none: StyleObject<{}>
    sm: StyleObject<{}>
    md: StyleObject<{}>
    lg: StyleObject<{}>
    xl: StyleObject<{}>
    xxl: StyleObject<{}>
    xxxl: StyleObject<{}>
    full: StyleObject<{}>
}"
`;

exports[`dts nested 1`] = `
"{
    auto: string
    none: string
    pan: {
        x: string
        y: string
        left: string
        right: string
        up: string
        down: string
    }
    \\"pinch-zoom\\": string
    manipulation: string
}"
`;

exports[`dts nested 2`] = `
"{
    a: {
        b: {
            c: {
                d: string
            }
        }
    }
}"
`;

exports[`dts number and string 1`] = `
"{
    2: string
    $: string
    1.5: string
    \\"dts-test\\": string
}"
`;

exports[`dts with default type 1`] = `
"{
    auto: StyleObject<{}>
    none: StyleObject<{}>
    pan: {
        x: StyleObject<{}>
        y: StyleObject<{}>
        left: StyleObject<{}>
        right: StyleObject<{}>
        up: StyleObject<{}>
        down: StyleObject<{}>
    }
    \\"pinch-zoom\\": StyleObject<{}>
    manipulation: StyleObject<{}>
}"
`;

exports[`dtsHandler with colorHandler 1`] = `
"{
    red: StyleObject
}"
`;

exports[`dtsHandler with colorHandler 2`] = `
"{
    red: ColorStyleObject
}"
`;

exports[`dtsHandler with configHandler 1`] = `
"{
    fixed: StyleObject
    local: StyleObject
    scroll: StyleObject
}"
`;

exports[`dtsHandler with configHandler 2`] = `
"StyleObject & {
    x: StyleObject
    y: StyleObject
    round: StyleObject
    space: StyleObject
}"
`;

exports[`dtsHandler with configHandler 3`] = `
"{
    repeat: StyleObject & {
        x: StyleObject
        y: StyleObject
        round: StyleObject
        space: StyleObject
    }
    noRepeat: StyleObject
}"
`;

exports[`dtsHandler with guard 1`] = `"{ size: Record<0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | 10 | 11 | 12, StyleObject> & Record<number, StyleObject> }"`;

exports[`dtsHandler with meld 1`] = `
"StyleObject & {
    x: StyleObject
    y: StyleObject
    round: StyleObject
    space: StyleObject
} & { size: Record<0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | 10 | 11 | 12, StyleObject> & Record<number, StyleObject> }"
`;

exports[`dtsHandler with numberHandler 1`] = `"Record<0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | 10 | 11 | 12, StyleObject> & Record<number, StyleObject>"`;

exports[`dtsHandler with numberHandler 2`] = `"Record<0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | 10 | 11 | 12, StyleObject> & Record<number, StyleObject>"`;

exports[`dtsHandler with numberHandler 3`] = `"Record<\\"1/2\\" | \\"1/3\\" | \\"2/3\\" | \\"1/4\\" | \\"2/4\\" | \\"3/4\\" | \\"1/5\\" | \\"2/5\\" | \\"3/5\\" | \\"4/5\\" | \\"1/6\\" | \\"2/6\\" | \\"3/6\\" | \\"4/6\\" | \\"5/6\\", StyleObject> & { [key: string]: StyleObject }"`;

exports[`dtsHandler with setup 1`] = `
"{
    red: StyleObject
    blue: {
        light: StyleObject
        handle: StyleObject & {
            x: StyleObject
            y: StyleObject
            round: StyleObject
            space: StyleObject
        }
    }
}"
`;

exports[`dtsHandler with setup 2`] = `
"{
    red: StyleObject
    blue: {
        light: StyleObject
        handle: StyleObject & {
            x: StyleObject
            y: StyleObject
            round: StyleObject
            space: StyleObject
        } & { size: Record<0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | 10 | 11 | 12, StyleObject> & Record<number, StyleObject> }
    }
}"
`;

exports[`generate dts 1`] = `
"import { buildLinearGradient, buildTransition } from \\"@windijs/core\\";
export declare const image: {
  render: Inject<{
      auto: StyleObject<{}>;
      pixel: StyleObject<{}>;
      edge: StyleObject<{}>;
  }, {
    auto: StyleObject<{}>
    pixel: StyleObject<{}>
    edge: StyleObject<{}>
}>;
};
export declare const fill: Inject<{}, {
    blue: {
        50: StyleObject<{opacity: (op: number) => StyleObject<{readonly gradient: StyleObject<{}>}>; readonly gradient: StyleObject<{}>}>
        100: StyleObject<{opacity: (op: number) => StyleObject<{readonly gradient: StyleObject<{}>}>; readonly gradient: StyleObject<{}>}>
    }
    cyan: {
        50: StyleObject<{opacity: (op: number) => StyleObject<{readonly gradient: StyleObject<{}>}>; readonly gradient: StyleObject<{}>}>
        100: StyleObject<{opacity: (op: number) => StyleObject<{readonly gradient: StyleObject<{}>}>; readonly gradient: StyleObject<{}>}>
        200: StyleObject<{opacity: (op: number) => StyleObject<{readonly gradient: StyleObject<{}>}>; readonly gradient: StyleObject<{}>}>
    }
}>;
export declare const colors: Inject<{}, {
    blue: {
        50: string
        100: string
    }
    cyan: {
        50: string
        100: string
        200: string
    }
}>;
"
`;
